@@ -54,9 +54,9 @@ GOptionEntry entries[] = {
     NULL },
   { "file", 'f', 0, G_OPTION_ARG_STRING,
     &script,
-    "APL script file",
+    "APL script file [path]",
     NULL },
-  { "version", 'v', 0, G_OPTION_ARG_NONE,
+  { "version", 0, 0, G_OPTION_ARG_NONE,
     &printversion,
     "Print version and exit",
     NULL },
